media query added to prevent content overflow our team to gallery

--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -666,6 +666,9 @@ header{
     .title-intro{
         padding-left:0;
     }
+    .col-sm{
+        padding-bottom:2rem;
+    }
 }
 
 
